using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StaticPrm
{

	#region Buttons
	
		/* мышка */
		public static string MOUSE_X = "Mouse X";
		public static string MOUSE_Y = "Mouse Y";

		/* клавиатура */
		public static string Horizontal = "Horizontal";
		public static string Vertical = "Vertical";
		public static string Jump = "Jump";
		public static string Run = "Fire3";
		public static string Grab = "Fire2";

	#endregion


	#region  Animation	

		/* для анимации */
		public static string animJump = "jump";
		public static string animGrab = "grab";
		public static string animGraund = "graund";
		public static string animHor = "hor";
		public static string animVer = "ver";

		/* весы */
		public static string animIsweighing = "isWeighing";
	
	#endregion



	#region GO NAME 
	
		public static string NAME_SNAKE_TONGUE = "SnakeTongue";
		

	#endregion

	#region GO TEG

		public static string TAG_WATER = "Water";
		public static string TAG_FOOD = "Food";
		public static string TAG_SNAKE = "Snake";
		public static string TAG_SNAKE_LIVE = "SnakeLive";
		public static string TAG_CLOCK = "Clock";
		public static string TAG_ENEMY = "Enemy";
		public static string TAG_SNAKE_TONGUE = "SnakeTongue";

	#endregion

	#region AUDIO NAME

		public static string AUDIO_SNAKE_WALK = "snakeWalk";
		public static string AUDIO_SNAKE_RUN = "snakeRun";
		public static string AUDIO_SNAKE_ATTACK = "snakeAttack";
		public static string AUDIO_SNAKE_JUMP = "snakeJump";
		public static string AUDIO_SNAKE_DAMAGE = "snakeDamage";
		public static string AUDIO_SNAKE_ENTER_WATER = "snakeEnterWater";
		public static string AUDIO_SNAKE_MOVE_WATER = "snakeMoveWater";
		public static string AUDIO_SNAKE_EATING = "snakeEating";
		public static string AUDIO_TIME_ADD = "timeAdd";
		public static string AUDIO_LIVE_ADD = "liveAdd";
		public static string AUDIO_BOX_DESTROY = "boxDestroy";
		public static string AUDIO_SCALE_MOVE_DOWN = "scaleMoveDown";
		public static string AUDIO_SCALE_MOVE_UP = "scaleMoveUp";
		public static string AUDIO_SCALE_NORMAL_MASS = "scaleNormalMass";
		public static string AUDIO_SCALE_LOW_MASS = "scaleLowMass";
		public static string AUDIO_FOOD_JUMP = "foodJump";
		public static string AUDIO_ENEMY_KVAK_MOVE = "enemyKvakMove";
		public static string AUDIO_ENEMY_BLADE_MAN_ROTATE = "enemyBladeManRotate";
		public static string AUDIO_ENEMY_DESTROY = "enemyDestroy";
		public static string AUDIO_START_LEVEL = "startLevel";
		public static string AUDIO_GAME_WIN = "gameWin";
		public static string AUDIO_GAME_OVER = "gameOver";
		public static string AUDIO_ENTER_SUB_MENU= "enterSubMenu";
		public static string AUDIO_EXIT_SUB_MENU = "exitSubMenu";
		public static string AUDIO_QUIT_GAME = "quitGame";
		public static string AUDIO_SELECT_IN_MENU = "selectInMenu";
		public static string AUDIO_MUSIC_SUB_MENU = "musicSubMenu";
		public static string AUDIO_MUSIC_LEVEL = "musicLevel";
		public static string AUDIO_EXPLOSION_BOMB = "explosionBomb";
		
	#endregion
		
}